--- a/app/Within/partExplore/PathProject/NavFeed/styles.module.css
+++ b/app/Within/partExplore/PathProject/NavFeed/styles.module.css
@@ -10,6 +10,10 @@
   transform: translate(-50%, 0);
 }
 
+.linkInactive {
+  cursor: text;
+}
+
 @media screen and (max-width:860px) {
   .boxFilterNav {
     width: 100%;
