--- a/app/Within/partExplore/PathProject/styles.module.css
+++ b/app/Within/partExplore/PathProject/styles.module.css
@@ -61,4 +61,7 @@
     display: none;
   }
 
+  .boxFooter {
+    margin-bottom: 14vh;
+  }
 }
